feature: add skip-frontend maven profile